# df-sdk

./: CHANGELOG.md  PLAN_v0.2.0.md  README.md  WHY-TAGS.md
.agents/workflows/: publish.md
.github/workflows/: codeql.yml  go-test.yml  mcp-publish.yml  mcp-test.yml  python-publish.yml  python-test.yml  typescript-publish.yml  typescript-test.yml
go/: LICENSE  README.md  client.go  client_test.go  exceptions.go  go.mod  grpc_client.go  query_builder.go
go/models/: dataset.go
mcp/: README.md  package-lock.json  package.json
mcp/src/: client.ts  index.ts  server.ts
mcp/src/__tests__/: errors.test.ts  format.test.ts  server.test.ts
mcp/src/tools/: download_document.ts  get_document.ts  list_datasets.ts  query_datasets.ts
mcp/src/utils/: errors.ts  format.ts
python/: .gitignore  README.md  pyproject.toml
python/src/df/: __init__.py  client.py  exceptions.py  grpc_client.py
python/src/df/models/: __init__.py  dataset.py
python/src/df/services/: __init__.py  async_datasets.py  datasets.py  query_builder.py
python/tests/: test_datasets.py
scripts/: release.sh  sync-versions.sh
tests/integration/: docker-compose.yml  openapi.yaml
tests/integration/go/: Dockerfile  integration_test.go
tests/integration/python/: Dockerfile
tests/integration/typescript/: Dockerfile
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  exceptions.ts  grpc-client.ts  index.ts
typescript/src/__tests__/: client.test.ts  datasets.test.ts
typescript/src/models/: dataset.ts
typescript/src/services/: datasets.ts  query-builder.ts
