[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataflare-sdk"
version = "0.1.0"
description = "Official Python SDK for the DataFlare API"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://dataflare.com"
Repository = "https://github.com/dataflarelab/df-sdk"

license = "MIT"
authors = [
  { name = "DataFlare Lab", email = "oss@dataflarelab.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.1",
    "pytest-asyncio>=0.23.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/df"]
