[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dataflare-sdk"
dynamic = ["version"]
description = "Official Python SDK for the DataFlare API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "DataFlare Lab", email = "oss@dataflarelab.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0"
]

[project.urls]
Homepage = "https://dataflare.com"
Repository = "https://github.com/dataflarelab/df-sdk"

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60.0",
    "grpc-requests>=0.1.20"
]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.1",
    "pytest-asyncio>=0.23.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/df"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true
tag_pattern = "^py/v(?P<version>.*)$"
